Make day 0 the default day

--- a/corehq/apps/reminders/templates/reminders/partial/complex_message_table.html
+++ b/corehq/apps/reminders/templates/reminders/partial/complex_message_table.html
@@ -7,8 +7,8 @@
                 <i class="icon-question-sign"
                    data-title="{% trans 'Day' %}"
                    data-content="{% blocktrans %}
-                       The day to which to send each event in the reminder.
-                       Day 1 indicates the day that the reminder was triggered.
+                       The day on which each event in the reminder comes due.
+                       Day 0 indicates the day that the reminder was triggered.
                        {% endblocktrans %}"
                    data-trigger="hover"></i>
             </a>
