--- a/corehq/apps/dashboard/templates/dashboard/dashboard_new_user.html
+++ b/corehq/apps/dashboard/templates/dashboard/dashboard_new_user.html
@@ -37,10 +37,9 @@
                 {% endif %}
             </div>
             <div class="panel-body">
-                <form action="{% url 'new_app' domain %}" method="post"><p class="text-center">
-                    <input type="hidden" name="type" value="Application">
-                    <input type="hidden" name="application_version" value="2.0">
-                    <button href="#" type="submit" class="dashboard-button">
+                <p class="text-center">
+                    <a href="{% url 'default_new_app' domain %}"
+                       class="dashboard-link">
                         <span class="dashboard-icon {% if project.commtrack_enabled %}dashboard-icon-commtrack{% else %}dashboard-icon-applications{% endif %}"></span>
                         <span class="lead">
                         {% if project.commtrack_enabled %}
@@ -53,8 +52,8 @@
                             {% endblocktrans %}
                         {% endif %}
                         </span>
-                    </button>
-                </p></form>
+                   </a>
+                </p>
             </div>
         </div>
     </div>
