Show data section if there is data or fields
Previously if there was no fields defined, uncategorized data was not
shown.

--- a/corehq/apps/users/templates/users/partial/basic_info_form.html
+++ b/corehq/apps/users/templates/users/partial/basic_info_form.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         {% crispy form_user_update %}
-        {% if data_fields_form.fields %}
+        {% if data_fields_form.fields or data_fields_form.data %}
             {% crispy data_fields_form %}
         {% endif %}
         <div class="form-actions">
