--- a/corehq/apps/commtrack/templates/commtrack/manage/product.html
+++ b/corehq/apps/commtrack/templates/commtrack/manage/product.html
@@ -15,7 +15,7 @@
         {% bootstrap_form_errors form %}
         {% bootstrap_fieldset form "Product Information" %}
 
-        {% if data_fields_form.fields %}
+        {% if data_fields_form.fields or data_fields_form.data %}
             {% crispy data_fields_form %}
         {% endif %}
 
