added new icon for signature to commcare hq webfont

--- a/corehq/apps/style/static/style/less/font-commcare/icons.less
+++ b/corehq/apps/style/static/style/less/font-commcare/icons.less
@@ -11,3 +11,4 @@
 .@{fcc-css-prefix}-@{fcc-fd-css-prefix}-datetime:before { content: @fcc-var-fd-datetime; }
 .@{fcc-css-prefix}-@{fcc-fd-css-prefix}-audio-capture:before { content: @fcc-var-fd-audio-capture; }
 .@{fcc-css-prefix}-@{fcc-fd-css-prefix}-android-intent:before { content: @fcc-var-fd-android-intent; }
+.@{fcc-css-prefix}-@{fcc-fd-css-prefix}-signature:before { content: @fcc-var-fd-signature; }
