--- a/corehq/apps/style/static/style/less/font-commcare/variables.less
+++ b/corehq/apps/style/static/style/less/font-commcare/variables.less
@@ -20,3 +20,4 @@
 @fcc-var-fd-datetime: "\f00a";
 @fcc-var-fd-audio-capture: "\f00b";
 @fcc-var-fd-android-intent: "\f00c";
+@fcc-var-fd-signature: "\f00d";
