--- a/corehq/apps/style/static/style/less/docs-style.less
+++ b/corehq/apps/style/static/style/less/docs-style.less
@@ -22,3 +22,11 @@ body, .docs-content {
   border-top: 1px solid #cccccc;
   text-align: center;
 }
+
+.styleguide-icon-panel {
+  i {
+    font-size: 1.5em;
+    line-height: 1.8em;
+    vertical-align: middle;
+  }
+}
