aadded icon documentation

--- a/corehq/apps/styleguide/templates/styleguide/base.html
+++ b/corehq/apps/styleguide/templates/styleguide/base.html
@@ -50,6 +50,7 @@
                 <nav class="collapse navbar-collapse" role="navigation">
                     <ul class="nav navbar-nav">
                         <li><a href="{% url 'styleguide_forms' %}">Forms</a></li>
+                        <li><a href="{% url 'styleguide_icons' %}">Icons</a></li>
                     </ul>
                 </nav>
             </div>
