add new set of icons for dashboard and a couple for vellum

--- a/corehq/apps/styleguide/templates/styleguide/_includes/icons/sources.html
+++ b/corehq/apps/styleguide/templates/styleguide/_includes/icons/sources.html
@@ -30,6 +30,42 @@
                     <i class="fcc fcc-flower"></i>
                     <code>&lt;i class="fcc fcc-flower"&gt;&lt;/i&gt;</code>
                 </li>
+                <li>
+                    <i class="fcc fcc-applications"></i>
+                    <code>&lt;i class="fcc fcc-applications"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-commtrack"></i>
+                    <code>&lt;i class="fcc fcc-commtrack"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-reports"></i>
+                    <code>&lt;i class="fcc fcc-reports"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-data"></i>
+                    <code>&lt;i class="fcc fcc-data"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-users"></i>
+                    <code>&lt;i class="fcc fcc-users"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-settings"></i>
+                    <code>&lt;i class="fcc fcc-settings"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-help"></i>
+                    <code>&lt;i class="fcc fcc-help"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-exchange"></i>
+                    <code>&lt;i class="fcc fcc-exchange"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-messaging"></i>
+                    <code>&lt;i class="fcc fcc-messaging"&gt;&lt;/i&gt;</code>
+                </li>
             </ul>
             <h4>Vellum Specific Icons</h4>
             <ul>
@@ -54,8 +90,16 @@
                     <code>&lt;i class="fcc fcc-fd-single-select"&gt;&lt;/i&gt;</code>
                 </li>
                 <li>
+                    <i class="fcc fcc-fd-single-circle"></i>
+                    <code>&lt;i class="fcc fcc-fd-single-circle"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
                     <i class="fcc fcc-fd-multi-select"></i>
                     <code>&lt;i class="fcc fcc-fd-multi-select"&gt;&lt;/i&gt;</code>
+                </li>
+                <li>
+                    <i class="fcc fcc-fd-multi-box"></i>
+                    <code>&lt;i class="fcc fcc-fd-multi-box"&gt;&lt;/i&gt;</code>
                 </li>
                 <li>
                     <i class="fcc fcc-fd-decimal"></i>
