--- a/corehq/apps/app_manager/templates/app_manager/module_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view.html
@@ -429,6 +429,13 @@
                 <legend>
                     {% trans "Display Properties" %}
                 </legend>
+                <div class="add-tab">
+{#                    <a href="#" data-bind="visible: !showing(), click: function(data){data.showing(true);}">#}
+                    <a href="#" {#onclick="console.log('woah');"#} data-bind="click: addTab">
+                        <i class="icon-plus"></i>
+                        Add a tab
+                    </a>
+                </div>
             </div>
         </div>
     </div>
