--- a/corehq/apps/app_manager/templates/app_manager/module_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view.html
@@ -430,8 +430,7 @@
                     {% trans "Display Properties" %}
                 </legend>
                 <div class="add-tab">
-{#                    <a href="#" data-bind="visible: !showing(), click: function(data){data.showing(true);}">#}
-                    <a href="#" {#onclick="console.log('woah');"#} data-bind="click: addTab">
+                    <a href="#" data-bind="click: addTab">
                         <i class="icon-plus"></i>
                         Add a tab
                     </a>
