--- a/custom/tdh/templates/tdh/tdh_template.html
+++ b/custom/tdh/templates/tdh/tdh_template.html
@@ -2,70 +2,14 @@
 {% load hq_shared_tags %}
 {% load i18n %}
 
-{% block main_column %}
-    <div class="hq-accordion-control{% if report.is_async%} hide{% endif %}" id="reportFiltersAccordion">
-        {% if report.show_filters %}
-            <div id="reportFilters" class="accordion-body collapse">
-                <div class="accordion-inner">
-                    <form method="get" id="paramSelectorForm" class="form-horizontal">
-                        <input id="exportDetailedFilter" type="checkbox" style="display: none"/>
-                        <div id="hq-report-filters">
-                            {% if not report.is_async %}
-                                {% include "reports/async/filters.html" %}
-
-                            {% endif %}
-                        </div>
-                        <div class="form-actions">
-                            {% block report_filter_actions %}
-                            <button type="submit" class="btn disabled"
-                                    data-loading-text="{% trans "Generating Report..." %}"
-                                    data-standard-text="{% trans "Apply" %}">
-                                {% trans "Apply" %}
-                            </button>
-                            {% endblock %}
-                        </div>
-                    </form>
-                </div>
-            </div>
-        {% endif %}
-        <div class="accordion-heading">
-            <div class="accordion-actions">
-                {% if report.show_filters %}
-                    <a href="#reportFilters" class="btn" id="toggle-report-filters"
-                       data-toggle="collapse" data-open-text="{% trans "Show Filter Options" %}"
-                       data-close-text="{% trans "Hide Filter Options" %}">
-                        {% trans "Filter Options" %}
-                    </a>
-                {% endif %}
-
-                {% if report.is_exportable %}
-                    <a href="#" class="btn{% if report.needs_filters %} hide{% endif %}" id="export-report-excel">
-                        <i class="icon icon-share"></i> {% trans "Export to Excel" %}
-                    </a>
-                    <label class="checkbox inline">
-                        <input id="exportDetailed" type="checkbox"/>
-                        {% trans "Generate detailed Excel Export?" %}
-                    </label>
-                {% endif %}
-            </div>
-            <div id="extra-filter-info" class="accordion-extra"></div>
-        </div>
-    </div>
-
-    {% if report.special_notice %}
-    <div class="alert alert-info" style="margin-bottom: 2px">
-        <h4>{% trans 'Notice' %}</h4>
-        <p>{{ report.special_notice }}</p>
-    </div>
-    {% endif %}
-    <div id="report-content">
-        {% if not report.is_async and report.slug %}
-            {% block reportcontent %}
-            {% endblock %}
-        {% else %}
-            {% include "reports/async/default.html" %}
-        {% endif %}
-    </div>
+{% block export %}
+    <a href="#" class="btn{% if report.needs_filters %} hide{% endif %}" id="export-report-excel">
+        <i class="icon icon-share"></i> {% trans "Export to Excel" %}
+    </a>
+    <label class="checkbox inline">
+        <input id="exportDetailed" type="checkbox"/>
+        {% trans "Generate detailed Excel Export?" %}
+    </label>
 {% endblock %}
 
 {% block js-inline %}
