fix missing labels

--- a/corehq/apps/app_manager/templates/app_manager/partials/form_tab_settings.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/form_tab_settings.html
@@ -26,7 +26,7 @@
                 visible: visible,
                 css: {error: hasError()}">
 
-                {% include "app_manager/partials/nav_menu_media.html" with item=form %}
+                {% include "app_manager/partials/nav_menu_media.html" with item=module ICON_LABEL="Icon" AUDIO_LABEL="Audio" %}
 
             </div>
         </div>
