remove javascript block from new filters. change controls block name

--- a/corehq/apps/reports_core/templates/reports_core/filters/datespan_filter.html
+++ b/corehq/apps/reports_core/templates/reports_core/filters/datespan_filter.html
@@ -1,5 +1,5 @@
 {% extends "reports_core/filters/filter_base.html" %}
-{% block controls %}
+{% block filter-controls %}
     <input name="startdate"/>
     <input name="enddate"/>
 {% endblock %}
