add functional UI for dynamic filter selection using select2

--- a/corehq/apps/reports_core/templates/reports_core/base_template_new.html
+++ b/corehq/apps/reports_core/templates/reports_core/base_template_new.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 {% block uncompressed-stylesheets %}{{ block.super }}
     <link href="{% static 'hqwebapp/js/lib/nvd3/nv.d3.css' %}" rel="stylesheet">
+    <link href="{% static 'hqwebapp/js/lib/select2/select2.css' %}" rel="stylesheet"/>
 {% endblock %}
 {% block js %}{{ block.super }}
     {% include "imports/datatables.html" %}
@@ -12,6 +13,7 @@
     <script src="{% static 'hqwebapp/js/lib/nvd3/lib/d3.v3.js' %}"></script>
     <script src="{% static 'hqwebapp/js/lib/nvd3/nv.d3.v1.1.10b.min.js' %}"></script>
     <script src="{% static 'reports_core/js/charts.js' %}"></script>
+    <script src="{% static 'hqwebapp/js/lib/select2/select2.js' %}"></script>
 {% endblock %}
 
 {% block js-inline %}{{ block.super }}
@@ -67,7 +69,15 @@
             event.preventDefault();
             reportTables.render();
         });
+    });
 
+    $(function () {
+        // add any filter javascript dependencies
+        {% for filter in report.filters %}
+            {% if filter.javascript_template %}
+                {% include filter.javascript_template with filter=filter context=filter_context|dict_lookup:filter.css_id %}
+            {% endif %}
+        {% endfor %}
     });
     </script>
 {% endblock %}
