--- a/corehq/apps/reports_core/templates/reports_core/filters/datespan_filter/datespan_filter.html
+++ b/corehq/apps/reports_core/templates/reports_core/filters/datespan_filter/datespan_filter.html
@@ -1,5 +1,6 @@
 {% extends "reports_core/filters/filter_base.html" %}
 {% block filter-controls %}
-    <input name="startdate"/>
-    <input name="enddate"/>
+    <input type="text" id="{{ filter.css_id }}-input" name="{{ filter.css_id }}" />
+    <input type="hidden" id="{{ filter.css_id }}-start" name="{{ filter.css_id }}-start" />
+    <input type="hidden" id="{{ filter.css_id }}-end" name="{{ filter.css_id }}-end" />
 {% endblock %}
