fix some styling

--- a/corehq/apps/style/static/dashboard/less/dashboard.less
+++ b/corehq/apps/style/static/dashboard/less/dashboard.less
@@ -5,12 +5,12 @@
 @panel-dashboard-header-bg: @navbar-default-bg;
 
 .dashboard-icon {
-  margin: @grid-gutter-width/2 auto;
   display: block;
   text-align: center;
 }
 
 .dashboard-icon-large {
+  margin: 0 auto;
   @icon-size: 220px;
   width: @icon-size;
   height: @icon-size;
@@ -18,7 +18,7 @@
 }
 
 .dashboard-icon-medium {
-  @icon-size: 189px;
+  @icon-size: 230px;
   width: @icon-size;
   height: @icon-size;
   margin: 0 auto;
