WIP: Faciliti Details report

--- a/custom/ilsgateway/static/ilsgateway/css/ilsgateway.css
+++ b/custom/ilsgateway/static/ilsgateway/css/ilsgateway.css
@@ -21,6 +21,14 @@
     list-style: none;
 }
 
+.small_table {
+    width: 100% !important;
+}
+
+.dataTables_scrollHeadInner{
+    width: 100% !important;
+}
+
 .module ul {
     padding: 0.5em;
     padding-top: 0;
