--- a/custom/ilsgateway/templates/ilsgateway/partials/report_table_with_tabs.html
+++ b/custom/ilsgateway/templates/ilsgateway/partials/report_table_with_tabs.html
@@ -6,16 +6,19 @@
 {% if report.needs_filters %}
     {% include 'reports/standard/partials/description.html' %}
 {% else %}
-    <div style="float: left;">
+    <div style="float: left;" class="{{ thisreport.css_class }}">
         <div class="media">
           <div class="media-body" style="height: 64px">
              <h4 class="media-heading">{{ report_table.title }}</h4>
               {% if report_table.title_url %}
                 <a href="{{ report_table.title_url }}">{{ report_table.title_url_name }}</a>
               {% endif %}
+              {% if report_table.subtitle %}
+                <span style="color: slategray">{{ report_table.subtitle }}</span>
+              {% endif %}
           </div>
         </div>
-        <table id="report_table_{{ report_table.slug }}" class="table table-striped datatable">
+        <table id="report_table_{{ report_table.slug }}" class="table table-striped datatable  {% if thisreport.css_class == 'row_chart' %}small_table{% endif %}">
             <thead>
                 <tr>
                     {% for header in report_table.headers %}
