--- a/corehq/apps/app_manager/templates/app_manager/releases.html
+++ b/corehq/apps/app_manager/templates/app_manager/releases.html
@@ -60,16 +60,20 @@
 </script>
 <script>
     function track_deploy_type(type) {
-        ga('send', 'event', 'App Manager', 'Deploy Type', type);
+        if (ga !== undefined) {
+            ga('send', 'event', 'App Manager', 'Deploy Type', type);
+        }
     }
 
     function track_deploy_type_and_redirect(type, href) {
         {% if GOOGLE_ANALYTICS_ID %}
-            ga('send', 'event', 'App Manager', 'Deploy Type', type, {
-                'hitCallback': function () {
-                    document.location = href;
-                }
-            });
+            if (ga !== undefined) {
+                ga('send', 'event', 'App Manager', 'Deploy Type', type, {
+                    'hitCallback': function () {
+                        document.location = href;
+                    }
+                });
+            }
         {% else %}
             return true;
         {% endif %}
