--- a/corehq/apps/app_manager/templates/app_manager/releases.html
+++ b/corehq/apps/app_manager/templates/app_manager/releases.html
@@ -219,7 +219,7 @@
                             <a class="btn" data-bind="
                                 openModal: 'deploy-build-modal-template',
                                 css: {'btn-primary': !build_broken(), 'btn-danger': build_broken},
-                                click: function() { ga('send', 'event', 'App Manager', 'Deploy Button', '{{ app.id }}'); }
+                                click: function() { if (ga !== undefined) { ga('send', 'event', 'App Manager', 'Deploy Button', '{{ app.id }}'); } }
                             ">
                                 <span class="icon icon-exclamation-sign" data-bind="visible: build_broken"></span>
                                 {% trans "Deploy" %}
