--- a/corehq/apps/reminders/templates/reminders/reminders_list.html
+++ b/corehq/apps/reminders/templates/reminders/reminders_list.html
@@ -36,23 +36,14 @@
         <div data-bind="template: {
             name: 'reminder-list-template',
             data: {
-                reminders: activeReminders,
-                title: '{% trans 'Active Reminders' %}',
-                actionTemplate: 'deactivate-reminder-template'
-            }
-        }"></div>
-        <div data-bind="template: {
-            name: 'reminder-list-template',
-            data: {
-                reminders: inactiveReminders,
-                title: '{% trans 'Inactive Reminders' %}',
-                actionTemplate: 'activate-reminder-template'
+                reminders: reminders,
+                title: '{% trans 'Reminders' %}'
             }
         }"></div>
     </div>
 
     <script type="text/html" id="reminder-list-template">
-        <div class="row-fluid" data-bind="visible: reminders().length">
+        <div class="row-fluid">
             <div class="span12">
                 <h3 data-bind="text: title"></h3>
                 <table class="table table-striped table-bordered">
@@ -77,7 +68,8 @@
                                 </div>
                             </td>
                             <td>
-                                <div style="display: inline;" data-bind="template: {name: $parent.actionTemplate, data: $data}"></div>
+                                <div style="display: inline;" data-bind="template: {name: 'activate-reminder-template', data: $data}"></div>
+                                <div style="display: inline;" data-bind="template: {name: 'deactivate-reminder-template', data: $data}"></div>
                                 <div style="display: inline;" data-bind="template: {name: 'delete-reminder-template', data: $data}"></div>
                             </td>
                         </tr>
@@ -89,10 +81,11 @@
 
     <script type="text/html" id="deactivate-reminder-template">
         <button type="button"
-                data-bind="event: {
+                data-bind="visible: active, event: {
                     click: deactivate
                 }"
                 class="btn"
+                data-success-text="{% trans 'Deactivate' %}"
                 data-loading-text="{% trans 'Deactivating reminder...' %}"
                 data-error-text="{% trans 'Error deactivating, try again?' %}"
                 data-locked-text="{% trans 'Wait for rule to finish and try again...' %}"
@@ -103,10 +96,11 @@
 
     <script type="text/html" id="activate-reminder-template">
         <button type="button"
-                data-bind="event: {
+                data-bind="visible: !active(), event: {
                     click: activate
                 }"
                 class="btn"
+                data-success-text="{% trans 'Activate' %}"
                 data-loading-text="{% trans 'Activating reminder...' %}"
                 data-error-text="{% trans 'Error activating, try again?' %}"
                 data-locked-text="{% trans 'Wait for rule to finish and try again...' %}"
