--- a/corehq/apps/reminders/templates/reminders/reminders_list.html
+++ b/corehq/apps/reminders/templates/reminders/reminders_list.html
@@ -5,6 +5,7 @@
 {% block js %} {{ block.super }}
     <script src="{% static 'reminders/ko/reminders.old.list.js' %}"></script>
     <script src="{% static 'reminders/ko/reminders.list.js' %}"></script>
+    {% include "imports/datatables.html" %}
 {% endblock %}
 
 {% block js-inline %} {{ block.super }}
@@ -13,6 +14,18 @@
             '{% url "reminder_rule_progress" domain %}');
         ko.applyBindings(remindersList, $('#reminders-list').get(0));
         remindersList.init();
+
+        $(function() {
+            $("#reminder-list-table").dataTable({
+                "sPaginationType": "bootstrap",
+                "bLengthChange": false,
+                "bFilter": true,
+                "oLanguage": {"sEmptyTable": "{% trans 'There are no reminders to display.' %}", "sInfoEmpty" : ""},
+                "bSort": true,
+                "aaSorting": [[0, "asc"]],
+                "iDisplayLength": 5
+            });
+        });
     </script>
 {% endblock %}
 
@@ -46,7 +59,7 @@
         <div class="row-fluid">
             <div class="span12">
                 <h3 data-bind="text: title"></h3>
-                <table class="table table-striped table-bordered">
+                <table id="reminder-list-table" class="table table-striped table-bordered">
                     <thead>
                         <tr>
                             <th class="span4">{% trans 'Name' %}</th>
@@ -56,7 +69,7 @@
                         </tr>
                     </thead>
                     <tbody data-bind="foreach: reminders">
-                        <tr>
+                        <tr data-bind="attr: {id: id}">
                             <td><a data-bind="attr: {href: url}"><span data-bind="text: name"></span></a></td>
                             <td data-bind="text: caseType"></td>
                             <td>
