--- a/corehq/apps/hqadmin/templates/hqadmin/doc_in_es.html
+++ b/corehq/apps/hqadmin/templates/hqadmin/doc_in_es.html
@@ -3,7 +3,6 @@
 <html>
     <head>
         <title>Doc {{ doc_id }} {{ status }}</title>
-
         {% compress css %}
         <link type="text/less" rel="stylesheet" media="all" href="{% static 'style/less/hqstyle-core.less' %}"/>
         {% endcompress %}
@@ -23,8 +22,9 @@
             </div>
             {% if doc_id %}
                 <h3>Doc {{ doc_id }} {{ status }}</h3>
-                <p>Found in index: {{ index }}</p>
                 <p>Doc type: {{ doc_type }}</p>
+{% for index, es_doc in found_indices.items %}
+                <p>Found in index: {{ index }}</p>
                 <div class="row-fluid">
                     <div class="span6">
                         <h3>Elasticsearch Doc:</h3>
@@ -35,7 +35,8 @@
                         <pre>{{ couch_doc }}</pre>
                     </div>
                 </div>
-            {% endif %}
+{% endfor %}
+{% endif %}
         </div>
     </body>
 </html>
