--- a/corehq/apps/hqwebapp/templates/hqwebapp/base.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/base.html
@@ -180,6 +180,9 @@
                                 <div class="controls">
                                     <textarea class="input-xlarge" name="message" id="bug-report-message" rows="3"></textarea>
                                     <p class="help-block">{% trans "Please try to include as much information as possible." %}</p>
+                                    <div class="alert fade in page-level-alert alert-error" id="empty-issue-alert">
+                                        <a class="close" data-dismiss="alert" href="#">×</a>{% trans "Please enter some description about the issue" %}
+                                    </div>
                                 </div>
                             </div>
 
@@ -205,7 +208,7 @@
                                     <input type="text" class="input-xlarge" name="cc" id="bug-report-cc" rows="1">
                                     <p class="help-block">{% trans "Comma-separated email addresses of others you want to notify about this issue" %}
                                     </p>
-                                    <div class="alert fade in page-level-alert alert-error">
+                                    <div class="alert fade in page-level-alert alert-error" id="invalid-cc-alert">
                                         <a class="close" data-dismiss="alert" href="#">×</a>{% trans "Please enter valid comma-separated email-list." %}
                                     </div>
                                 </div>
@@ -559,13 +562,6 @@
                 if ($.browser.msie) {
                     $('#unsupported-browser').show();
                 }
-                var $alertBox = $("#hqwebapp-bugReportForm .alert");
-                $alertBox.hide();
-                $("#hqwebapp-bugReportForm input[name='cc']").focus(
-                    function(){
-                        $alertBox.hide();
-                    }
-                );
             });
         </script>
     </body>
