--- a/corehq/apps/style/templates/style/includes/modal_report_issue.html
+++ b/corehq/apps/style/templates/style/includes/modal_report_issue.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-horizontal">
-                        <div class="form-group">
+                        <div class="form-group" id="bug-report-subject-form-group">
                             <label for="bug-report-subject"
                                    class="col-sm-3 control-label">{% trans "Short Description" %}</label>
                             <div class="col-sm-9">
@@ -27,6 +27,9 @@
                                        name="subject"
                                        id="bug-report-subject"
                                        placeholder="{% trans 'One Sentence Description of Issue' %}">
+                                <span class="label label-danger hide">
+                                        <i class="fa fa-warning"></i> {% trans 'Please give us some information about the issue' %}
+                                </span>
                             </div>
                         </div>
                         <div class="form-group">
