--- a/custom/ilsgateway/templates/ilsgateway/partials/tabs.html
+++ b/custom/ilsgateway/templates/ilsgateway/partials/tabs.html
@@ -16,7 +16,7 @@
                 {% endif %}
                 {% if report_supervision_url != '' %}
                 <li {% if view_mode == "supervision" %}class="active"{% endif %}>
-                    <a href="{{ report_interactions_url }}{% if notabs %}&notabs{% endif %}" >{% trans "Supervision" %}</a></li>
+                    <a href="{{ report_supervision_url }}{% if notabs %}&notabs{% endif %}" >{% trans "Supervision" %}</a></li>
                 {% endif %}
                 {% if report_delivery_url != '' %}
                 <li {% if view_mode == "delivery" %}class="active"{% endif %}>
