--- a/corehq/apps/reports/templates/reports/partials/maps.html
+++ b/corehq/apps/reports/templates/reports/partials/maps.html
@@ -9,5 +9,6 @@
 
 {% block content %}
     <table class="table table-striped datatable dataTable" id="tabular"></table>
+    <div class="row-fluid dataTables_control" style="height: 20px"></div>
 {% endblock content %}
 
